--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -12,6 +12,6 @@ body { padding: 0; margin: 0 }
 .unity-mobile #unity-footer { display: none }
 #unity-webgl-logo { float:left; width: 204px; height: 38px; background: url('webgl-logo.png') no-repeat center }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
-#unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('full-screen.png') no-repeat center }
+#unity-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('full-screen.png') no-repeat center; margin-right: 12px;}
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
-#exit-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('full-screen.png') no-repeat center }
+#exit-fullscreen-button { cursor:pointer; float: right; width: 38px; height: 38px; background: url('full-screen.png') no-repeat center; margin-right: 12px;}
